fixed styling issue on mobile with conditions container

--- a/src/style.css
+++ b/src/style.css
@@ -212,7 +212,7 @@ input[type="checkbox"] {
         grid-column: 1/-1;
         grid-template-columns: 1fr 1fr;
         gap: 0px;
-        width: 90%;
+        width: 100%;
         justify-content: left;
         justify-items: left;
     }
